--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <div class="rating-card">
     <div class="rating-state">
-      <div>
+      <div class="star-icon-container">
         <img class="icon-image" src="images/icon-star.svg" alt="star icon">
       </div>
       <div class="rating-question">
@@ -41,14 +41,16 @@
         <button>4</button>
         <button>5</button>
       </div>
-      <button>Submit</button>
+      <button>SUBMIT</button>
     </div>
   </div>
 
   <div class="submitted-card">
     <div class="thankyou-state">
-      <img src="images/illustration-thank-you.svg" alt="thank-you-icon" width="5%">
-      <div> You selected 3 out of 5</div>
+      <img class="thankyou-icon" src="images/illustration-thank-you.svg" alt="thank-you-icon" width="5%">
+      <div id="user-selection">
+        <p>You selected 3 out of 5</p>
+      </div>
       <div class="rating-greeting">
         <h1>Thank you!</h1>
         <p>We appreciate you taking the time to give a rating. If you ever need more support,
