--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles/stylesheet.css">
 
+
   <title>Frontend Mentor | Interactive rating component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -25,7 +26,7 @@
   <!-- Rating state start -->
 
   <div class="rating-card">
-    <div class="rating-state">
+    <div class="rating-state" id="rating-state">
       <div class="star-icon-container">
         <img class="icon-image" src="images/icon-star.svg" alt="star icon">
       </div>
@@ -35,21 +36,22 @@
           to help us improve our offering!</p>
       </div>
       <div class="rating-numbers">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
+        <button class="rating-btn" data-rating="1">1</button>
+        <button class="rating-btn" data-rating="2">2</button>
+        <button class="rating-btn" data-rating="3">3</button>
+        <button class="rating-btn" data-rating="4">4</button>
+        <button class="rating-btn" data-rating="5">5</button>
       </div>
-      <button>SUBMIT</button>
+      <button type="submit" onclick="printRating()">SUBMIT</button>
     </div>
   </div>
 
+
   <div class="submitted-card">
-    <div class="thankyou-state">
+    <div class="thankyou-state" id="thankyou-state">
       <img class="thankyou-icon" src="images/illustration-thank-you.svg" alt="thank-you-icon" width="5%">
       <div id="user-selection">
-        <p>You selected 3 out of 5</p>
+
       </div>
       <div class="rating-greeting">
         <h1>Thank you!</h1>
@@ -59,18 +61,6 @@
     </div>
   </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
   <!-- Thank you state end -->
 
 
@@ -78,6 +68,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="scripts/script.js"></script>
 </body>
 
 </html>
